--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ font-family: 'Patrick Hand', cursive;
 }
 
 #nav * {
-background-color: #409098;
+background-color: #00282c;
 width:auto;
 height: auto;
 
